# ayon-addons-settings

./: .gitignore  README.md
aftereffects/dev/: .gitignore  (+2 more)
slack/dev/: README.md  __init__.py  create_package.py  pyproject.toml
slack/dev/client/openpype_slack/: README.md  __init__.py  manifest.yml  slack_module.py
slack/dev/client/openpype_slack/launch_hooks/: pre_python2_vendor.py
slack/dev/client/openpype_slack/plugins/publish/: collect_slack_family.py  integrate_slack_api.py
slack/dev/client/openpype_slack/python2_vendor/python-slack-sdk-1/: .appveyor.yml  .coveragerc  .gitignore  .travis.yml  LICENSE  docs.sh  requirements.txt  setup.cfg  setup.py  test_requirements.txt  tox.ini
slack/dev/client/openpype_slack/python2_vendor/python-slack-sdk-1/.github/: contributing.md  issue_template.md  maintainers_guide.md  pull_request_template.md
slack/dev/client/openpype_slack/python2_vendor/python-slack-sdk-1/docs/: .buildinfo  about.html  auth.html  basic_usage.html  changelog.html  conversations.html  faq.html  genindex.html  index.html  metadata.html  real_time_messaging.html  search.html
slack/dev/client/openpype_slack/python2_vendor/python-slack-sdk-1/docs-src/: Makefile  about.rst  auth.rst  basic_usage.rst  changelog.rst  conf.py  conversations.rst  faq.rst  index.rst  metadata.rst  real_time_messaging.rst
slack/dev/client/openpype_slack/python2_vendor/python-slack-sdk-1/slackclient/: __init__.py  channel.py  client.py  exceptions.py  im.py  server.py  slackrequest.py  user.py  util.py  version.py
slack/dev/settings/: main.py  publish_plugins.py
(+174 files in other folders)
